included junit, mockito test cases, updated readme files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,6 @@ spring.mail.username=${SMTP_USRNME}
 spring.mail.password=${SMTP_PWD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #all the env variables are set in nano ~/.zshrc
