--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,13 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Set environment variables
+      run: |
+        echo "SMTP_PWD=${{ secrets.SMTP_PWD }}" >> $GITHUB_ENV
+        echo "SMTP_USRNME=${{ secrets.SMTP_USRNME }}" >> $GITHUB_ENV
+        echo "DB_URL=${{ secrets.DB_URL }}" >> $GITHUB_ENV
+        echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> $GITHUB_ENV
+        echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
     - name: Build with Maven
       run: mvn clean package
     - name: List the files
