--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,3 +40,9 @@ jobs:
         chmod 600 key.pem
     - name: List the files
       run: cd target && ls -ltr
+    - name: Transfer the jar file to server
+      env:
+        USERNAME: ${{ secrets.SSH_USERNAME }}
+        SERVER: ${{ secrets.SSH_SERVER }}
+      run: |
+        scp -i key.pem -o StrictHostKeyChecking=no target/crm-new.jar $USERNAME@$SERVER:/home/ubuntu/crm-deploy
