--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,4 +49,4 @@ jobs:
         USERNAME: ${{ secrets.SSH_USERNAME }}
         SERVER: ${{ secrets.SSH_SERVER }}
       run: |
-        scp -i key.pem -o StrictHostKeyChecking=no $USERNAME@$SERVER 'nohup java -Xms256m -Xmx1024m -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/home/ubuntu/crm-deploy -jar /home/ubuntu/crm-deploy/crm-new.jar > /home/ubuntu/crm-deploy/crm-new.log 2>&1 &'
+        ssh -i key.pem -o StrictHostKeyChecking=no $USERNAME@$SERVER 'nohup java -Xms256m -Xmx1024m -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/home/ubuntu/crm-deploy -jar /home/ubuntu/crm-deploy/crm-new.jar > /home/ubuntu/crm-deploy/crm-new.log 2>&1 &'
