--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,10 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Setup AWS CLI
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y awscli
     - name: Set environment variables
       run: |
         echo "SMTP_PWD=${{ secrets.SMTP_PWD }}" >> $GITHUB_ENV
@@ -34,24 +38,19 @@ jobs:
         echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
     - name: Build with Maven
       run: mvn clean package
-    - name: Setup PEM File
-      run: |
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
-        chmod 600 key.pem
-    - name: Transfer the jar file to server
+    - name: Configure AWS Access Credentials
       env:
-        USERNAME: ${{ secrets.SSH_USERNAME }}
-        SERVER: ${{ secrets.SSH_SERVER }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        scp -i key.pem -o StrictHostKeyChecking=no target/crm-new.jar $USERNAME@$SERVER:/home/ubuntu/crm-deploy
-    - name: Run application
+        aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+        aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+        aws configure set default.region us-east-1
+    - name: Transfer the jar file to S3 bucket
       env:
-        USERNAME: ${{ secrets.SSH_USERNAME }}
-        SERVER: ${{ secrets.SSH_SERVER }}
-        SMTP_PWD: ${{ secrets.SMTP_PWD }}
-        SMTP_USRNME: ${{ secrets.SMTP_USRNME }}
-        DB_URL: ${{ secrets.DB_URL }}
-        DB_USERNAME: ${{ secrets.DB_USERNAME }}
-        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        BUCKET_NAME: crmnew-artifact
+        FILE_PATH: target/crm-new.jar
+        S3_PATH: crm-new.jar
       run: |
-        ssh -i key.pem -o StrictHostKeyChecking=no $USERNAME@$SERVER 'export SMTP_PWD="${{ secrets.SMTP_PWD }}" SMTP_USRNME="${{ secrets.SMTP_USRNME }}" DB_URL="${{ secrets.DB_URL }}" DB_USERNAME="${{ secrets.DB_USERNAME }}" DB_PASSWORD="${{ secrets.DB_PASSWORD }}"; nohup java -Xms256m -Xmx1024m -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/home/ubuntu/crm-deploy -jar /home/ubuntu/crm-deploy/crm-new.jar > /home/ubuntu/crm-deploy/crm-new.log 2>&1 &'
+        aws s3 cp $FILE_PATH s3://$BUCKET_NAME/$S3_PATH
+        
